redhat/rhoai/v3.5/base/03-workloads/agents/loan-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-agent
  labels:
    openshell.dev/managed-by: gateway
    app.kubernetes.io/part-of: loan-agent
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
