redhat/rhoai/v3.5/base/03-workloads/agents/loan-agent/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: loan-agent
  labels:
    app: loan-agent
    app.kubernetes.io/part-of: loan-agent
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  to:
    kind: Service
    name: loan-agent-api
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
